<resources>
    <string name="app_name">eNROLL_SDK</string>
    <string name="anotherLang">ar</string>
    <string name="welcome">Welcome</string>
    <string name="forgotResetPassword">Forget password?/Reset password</string>
    <string name="contactUs">Contact us</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enterPassword">Enter your password</string>
    <string name="signInTitle">Sign In</string>
    <string name="fullName">Full name</string>
    <string name="mail">Mail</string>
    <string name="send">Send</string>
    <string name="mobileNumber">Mobile number</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="errorEmptyPassword">Please enter your password</string>
    <string name="errorLengthPassword">Password must be at least 6 characters long</string>
    <string name="errorMaxLengthPassword">Password cannot be longer than 128 characters</string>
    <string name="errorMissingUppercase">Password must contain at least one uppercase letter</string>
    <string name="errorMissingLowercase">Password must contain at least one lowercase letter</string>
    <string name="errorMissingNumber">Password must contain at least one number</string>
    <string name="errorMissingSymbol">Password must contain at least one symbol</string>
    <string name="errorFormatPassword">Incorrect password</string>
    <string name="scanIDFrontSide">Scan ID front side</string>
    <string name="takeAPictureOfFrontSide">Take a picture of the ID front side</string>
    <string name="takeAPictureOfFrontSideAgain">Error. Please take picture of the ID front side again</string>
    <string name="takeAPictureOfBackSide">Take a picture of the ID back side</string>
    <string name="takeAPictureOfBackSideAgain">Error. Please take picture of the ID back side again</string>
    <string name="recentTransactions">Recent transactions</string>
    <string name="pleaseVerifyAllTheData">Please verify all data</string>
    <string name="loginUserNameHelp">- Please enter username</string>
    <string name="loginPasswordHelp">- Please enter password</string>
    <string name="registerFirstNameHelp">- First name must not be less than 2 characters and more than 15. English letters only</string>
    <string name="registerLastNameHelp">- Last name must not be less than 2 characters and more than 15. English letters only</string>
    <string name="registerUsernameHelp">-Username must be unique and not used by others. \n- Only English characters are allowed \n- Uppercase and lowercase letters are allowed. \n Accepted special characters are (-_.) only.\n Maximum username length is 30 characters.\Username is case sensitive</string>
    <string name="registerMailHelp">- Enter a valid mail address that you can reach</string>
    <string name="registerMobileNumberHelp">-Only Egyptian mobile numbers are allowed. \n- Only English numbers are allowed \n- Enter a number that you can reach</string>
    <string name="registerPasswordHelp">-\n- Password must not contain the username or part of it. \n- Only English characters are allowed. \n- Password must not be less than 8 characters and not more than 20. \n- Password must contain at least two numbers, uppercase and lowercase letters, and a special symbol. \n No spaces allowed. \n Password is case sensitive.</string>
    <string name="registerConfirmPasswordHelp">- Please re-enter password</string>
    <string name="verifyOTP">Verify OTP</string>
    <string name="verifyMessage">OTP has been sent in a text message to your mobile number .</string>
    <string name="resendIn">Resend in</string>
    <string name="resendOTP">Resend OTP</string>
    <string name="verificationCodeError">Please enter a valid OTP</string>
    <string name="needToVerify">You need to verify</string>
    <string name="settings">Settings</string>
    <string name="termsAndConditions">Terms &amp; Conditions</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="ekycPopupSuccess">Data has been entered successfully and the account has been opened.</string>
    <string name="ekycPopupError">Error! Please try again</string>
    <string name="tryAgain">Try again</string>
    <string name="continue_to_next">Continue</string>
    <string name="aboutUs">About Us</string>
    <string name="aNewVersionIsAvailableNow">A new version is available now</string>
    <string name="yourApplicationIsOutOfDate">This version has expired</string>
    <string name="update">Update</string>
    <string name="oldMobileNumber">Old mobile number</string>
    <string name="newMobileNumber">New mobile number</string>
    <string name="EKYC">Digital setting</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="addPhoneNumber">Add phone number</string>
    <string name="addMail">Add Mail</string>
    <string name="state">City</string>
    <string name="nationalIdNumber">National ID</string>
    <string name="dateOfBirth">Date of birth</string>
    <string name="factoryNumber">Factory number</string>
    <string name="allCorrect">Correct Data</string>
    <string name="incorrectTryAgain">Error! Please try again</string>
    <string name="cancel">Cancel</string>
    <string name="enterNationalIDorMRZ">Enter national Id Or MRZ</string>
    <string name="wrongOtpFiveTimes">You Entered wrong OTP for 5 times</string>
    <string name="profession">Occupation</string>
    <string name="professionRequired">Profession is Required</string>
    <string name="genderRequired">Gender is Required</string>
    <string name="status">Status</string>
    <string name="religion">Religion</string>
    <string name="sex">Gender</string>
    <string name="dateOfExpiry">Expiry date</string>
    <string name="agreeTo">Agree</string>
    <string name="emptyError">This field is required</string>
    <string name="lengthError">Minimum length is {} characters</string>
    <string name="lengthErrorMax">Maximum length is {} characters</string>
    <string name="englishLettersOnlyAllowed">Only English letters are allowed</string>
    <string name="mailFormatError">Please enter a valid mail</string>
    <string name="mobileNumberLengthError">Number must be 11 digits</string>
    <string name="mobileNumberFormatError">Please enter a valid mobile number</string>
    <string name="invalidFormat">Invalid format. Please refer to the formatting guide</string>
    <string name="errorPartOfUsername">Password must not be the username or part of it</string>
    <string name="confirmPasswordError">Password doesn’t match</string>
    <string name="enterValidPasswordFirst">Please enter a valid password first</string>
    <string name="mobileWithX">xxxxxxxxx{}</string>
    <string name="lastRefresh">Last Refresh: {}</string>
    <string name="registerSuccessMessage">Registered successfully. Please log in</string>
    <string name="initFail">An error has occurred</string>
    <string name="frontDocumentAutoCaptureInterrupted">An error occurred while capturing the photo</string>
    <string name="cameraInitFailed">Failed to initiate the camera</string>
    <string name="cameraAccessFailed">Failed to access the camera</string>
    <string name="noCameraPermission">Camera access is not allowed</string>
    <string name="noFacesDetected">Couldn’t find the face</string>
    <string name="backDocumentAutoCaptureInterrupted">An error occurred while capturing the photo</string>
    <string name="passiveLivenessInterrupted">An error occurred while capturing the photo</string>
    <string name="SmileLivenessInterrupted">An error occurred while capturing the photo</string>
    <string name="facesNotMatch">Your face photo does not match the ID photo</string>
    <string name="faceNotReal">Your face is not clear</string>
    <string name="verificationFail">Verification failed</string>
    <string name="noFrontCameraOnDeviceAvailable">No front camera found</string>
    <string name="backSideNotTheSameAsTheFront">The two sides of the ID do not match</string>
    <string name="digitalOnBoardingClosed">Failed</string>
    <string name="expiredId">Sorry, your ID is expired</string>
    <string name="exit">Exit</string>
    <string name="too_many_attempts">You have exceeded the allowed number of attempts.</string>
    <string name="rescan">Rescan</string>
    <string name="login">Login</string>
    <string name="createAccount">Create account</string>
    <string name="introText">The digital identity platform of the Financial Supervisory Authority will enable you to use all the electronic services of the Authority without the need to go to the headquarters of the Authority and in easy and simple steps.</string>
    <string name="ekycSuccessfullyDone">Face matching completed successfully</string>
    <string name="start">Start</string>
    <string name="documentPreScanContent">To complete the ID scanning process, please place the ID inside the frame and hold your hands, and the scanning will take place automatically</string>
    <string name="passportPreScanContent">To complete the passport scanning process, please place the passport inside the frame and hold your hands, and the scanning will take place automatically</string>
    <string name="facePreCapContent">Face the front camera to confirm your identity</string>
    <string name="facePreCapTitle">Face matching</string>
    <string name="documentPreScanTitle">Scan ID</string>
    <string name="passportPreScanTitle">Scan Passport</string>
    <string name="timeoutException">Could not capture, please try again</string>
    <string name="nationalIdAlreadyExist">National Id Already Exist</string>
    <string name="isFrontSideWhileBackScan">Please scan the back side of the ID</string>
    <string name="intro1">To complete the registration process, a valid national ID must be available</string>
    <string name="device_location">To complete the registration process, you should give location access to the app</string>
    <string name="introPassport">To complete the registration process, a valid passport must be available</string>
    <string name="introPassportOrNI">To complete the registration process, a valid national ID or Passport must be available</string>
    <string name="intro2">A face photo will be taken and matched with the photo on the attached ID</string>
    <string name="intro3">To complete the registration process, a mobile number registered in the user\'s name must be available</string>
    <string name="intro4">You must enter your own email to complete the registration process and verify your account</string>
    <string name="intro5">Application password</string>
    <string name="intro7">You must select 3 security questions that you must answer.</string>
    <string name="intro8">Your Id will be verified by an anti-money laundering and anti-terrorism authority</string>
    <string name="intro9">You must read the terms and conditions and approve it in order to complete the registration</string>
    <string name="intro10">to sign documents electronically, please follow the instructions on the screen</string>
    <string name="start_request">Start Request</string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>
    <string name="isBackSideWhileFrontScanMessage">Please scan the front side of the ID</string>
    <string name="PAGE_DOESNT_MATCH_DOCUMENT_TYPE_OF_PREVIOUS_PAGE">This side of the ID does not match the other side</string>
    <string name="birthDate">Date of birth</string>
    <string name="navigation_destination_document_auto_capture">Document Auto Capture</string>
    <string name="navigation_destination_face_auto_capture">Face Auto Capture</string>
    <string name="navigation_destination_home">Home</string>
    <string name="navigation_destination_smile_liveness">Smile Liveness</string>
    <string name="navigation_destination_magnifeye_liveness">MagnifEye Liveness</string>
</resources>