<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/com.luminsoft.enroll_sdk.innovitices.HomeFragment">

    <fragment
        android:id="@+id/com.luminsoft.enroll_sdk.innovitices.HomeFragment"
        android:name="com.luminsoft.enroll_sdk.innovitices.HomeFragment"
        android:label="@string/navigation_destination_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_BasicDocumentAutoCaptureFragment"
            app:destination="@id/com.luminsoft.enroll_sdk.innovitices.documentautocapture.BasicDocumentAutoCaptureFragment" />

<!--        <action-->
<!--            android:id="@+id/action_HomeFragment_to_PasswordCaptureFragment"-->
<!--            app:destination="@id/com.luminsoft.enroll_sdk.innovitices.nfcreading.PasswordCaptureFragment" />-->

        <action
            android:id="@+id/action_HomeFragment_to_BasicFaceAutoCaptureFragment"
            app:destination="@id/com.luminsoft.enroll_sdk.innovitices.faceautocapture.BasicFaceAutoCaptureFragment" />

        <action
            android:id="@+id/action_HomeFragment_to_BasicSmileLivenessFragment"
            app:destination="@id/com.luminsoft.enroll_sdk.innovitices.smileliveness.BasicSmileLivenessFragment" />

        <action
            android:id="@+id/action_HomeFragment_to_BasicMagnifEyeLivenessFragment"
            app:destination="@id/com.luminsoft.enroll_sdk.innovitices.magnifeyeliveness.BasicMagnifEyeLivenessFragment" />

    </fragment>

    <fragment
        android:id="@+id/com.luminsoft.enroll_sdk.innovitices.documentautocapture.BasicDocumentAutoCaptureFragment"
        android:name="com.luminsoft.enroll_sdk.innovitices.documentautocapture.BasicDocumentAutoCaptureFragment"
        android:label="@string/navigation_destination_document_auto_capture"
        tools:layout="@layout/dot_document_fragment_document_auto_capture">

        <action
            android:id="@+id/action_BasicDocumentAutoCaptureFragment_to_DocumentAutoCaptureResultFragment"
            app:destination="@id/com.luminsoft.enroll_sdk.innovitices.documentautocapture.DocumentAutoCaptureResultFragment"
            app:popUpTo="@id/com.luminsoft.enroll_sdk.innovitices.HomeFragment" />

    </fragment>

    <fragment
        android:id="@+id/com.luminsoft.enroll_sdk.innovitices.documentautocapture.DocumentAutoCaptureResultFragment"
        android:name="com.luminsoft.enroll_sdk.innovitices.documentautocapture.DocumentAutoCaptureResultFragment"
        android:label="@string/navigation_destination_document_auto_capture"
        tools:layout="@layout/fragment_document_auto_capture_result" />

  <!--  <fragment
        android:id="@+id/com.luminsoft.enroll_sdk.innovitices.nfcreading.PasswordCaptureFragment"
        android:name="com.innovatrics.dot.samples.nfcreading.PasswordCaptureFragment"
        android:label="@string/navigation_destination_nfc_reading"
        tools:layout="@layout/fragment_document_auto_capture">

        <action
            android:id="@+id/action_PasswordCaptureFragment_to_NfcReadingFragment"
            app:destination="@id/NfcReadingFragment"
            app:popUpTo="@id/com.luminsoft.enroll_sdk.innovitices.HomeFragment" />

    </fragment>

    <fragment
        android:id="@+id/NfcReadingFragment"
        android:name="com.innovatrics.dot.samples.nfcreading.NfcReadingFragment"
        android:label="@string/navigation_destination_nfc_reading"
        tools:layout="@layout/fragment_nfc_reading">

        <action
            android:id="@+id/action_NfcReadingFragment_to_NfcReadingResultFragment"
            app:destination="@id/NfcReadingResultFragment"
            app:popUpTo="@id/com.luminsoft.enroll_sdk.innovitices.HomeFragment" />

        <action
            android:id="@+id/action_NfcReadingFragment_to_NfcReadingErrorFragment"
            app:destination="@id/NfcReadingErrorFragment"
            app:popUpTo="@id/com.luminsoft.enroll_sdk.innovitices.HomeFragment" />

    </fragment>

    <fragment
        android:id="@+id/NfcReadingResultFragment"
        android:name="com.innovatrics.dot.samples.nfcreading.NfcReadingResultFragment"
        android:label="@string/navigation_destination_nfc_reading"
        tools:layout="@layout/fragment_nfc_reading_result" />

    <fragment
        android:id="@+id/NfcReadingErrorFragment"
        android:name="com.innovatrics.dot.samples.nfcreading.NfcReadingErrorFragment"
        android:label="@string/navigation_destination_nfc_reading"
        tools:layout="@layout/fragment_nfc_reading_error" />-->

    <fragment
        android:id="@+id/com.luminsoft.enroll_sdk.innovitices.faceautocapture.BasicFaceAutoCaptureFragment"
        android:name="com.luminsoft.enroll_sdk.innovitices.faceautocapture.BasicFaceAutoCaptureFragment"
        android:label="@string/navigation_destination_face_auto_capture"
        tools:layout="@layout/dot_face_fragment_face_auto_capture">

        <action
            android:id="@+id/action_BasicFaceAutoCaptureFragment_to_FaceAutoCaptureResultFragment"
            app:destination="@id/com.luminsoft.enroll_sdk.innovitices.faceautocapture.FaceAutoCaptureResultFragment"
            app:popUpTo="@id/com.luminsoft.enroll_sdk.innovitices.HomeFragment" />

    </fragment>

    <fragment
        android:id="@+id/com.luminsoft.enroll_sdk.innovitices.faceautocapture.FaceAutoCaptureResultFragment"
        android:name="com.luminsoft.enroll_sdk.innovitices.faceautocapture.FaceAutoCaptureResultFragment"
        android:label="@string/navigation_destination_face_auto_capture"
        tools:layout="@layout/fragment_face_auto_capture_result" />

    <fragment
        android:id="@+id/com.luminsoft.enroll_sdk.innovitices.smileliveness.BasicSmileLivenessFragment"
        android:name="com.luminsoft.enroll_sdk.innovitices.smileliveness.BasicSmileLivenessFragment"
        android:label="@string/navigation_destination_smile_liveness"
        tools:layout="@layout/dot_face_fragment_smile_liveness">

        <action
            android:id="@+id/action_BasicSmileLivenessFragment_to_SmileLivenessResultFragment"
            app:destination="@id/com.luminsoft.enroll_sdk.innovitices.smileliveness.SmileLivenessResultFragment"
            app:popUpTo="@id/com.luminsoft.enroll_sdk.innovitices.HomeFragment" />

    </fragment>

    <fragment
        android:id="@+id/com.luminsoft.enroll_sdk.innovitices.smileliveness.SmileLivenessResultFragment"
        android:name="com.luminsoft.enroll_sdk.innovitices.smileliveness.SmileLivenessResultFragment"
        android:label="@string/navigation_destination_smile_liveness"
        tools:layout="@layout/fragment_smile_liveness_result" />

    <fragment
        android:id="@+id/com.luminsoft.enroll_sdk.innovitices.magnifeyeliveness.BasicMagnifEyeLivenessFragment"
        android:name="com.luminsoft.enroll_sdk.innovitices.magnifeyeliveness.BasicMagnifEyeLivenessFragment"
        android:label="@string/navigation_destination_magnifeye_liveness"
        tools:layout="@layout/dot_face_fragment_magnifeye_liveness">

        <action
            android:id="@+id/action_BasicMagnifEyeLivenessFragment_to_MagnifEyeLivenessResultFragment"
            app:destination="@id/com.luminsoft.enroll_sdk.innovitices.magnifeyeliveness.MagnifEyeLivenessResultFragment"
            app:popUpTo="@id/com.luminsoft.enroll_sdk.innovitices.HomeFragment" />

    </fragment>

    <fragment
        android:id="@+id/com.luminsoft.enroll_sdk.innovitices.magnifeyeliveness.MagnifEyeLivenessResultFragment"
        android:name="com.luminsoft.enroll_sdk.innovitices.magnifeyeliveness.MagnifEyeLivenessResultFragment"
        android:label="@string/navigation_destination_magnifeye_liveness"
        tools:layout="@layout/fragment_magnifeye_liveness_result" />

</navigation>
